--- a/jfs2016-slides/index.html
+++ b/jfs2016-slides/index.html
@@ -42,38 +42,32 @@
 
         <div class="slides">
             <section id="title">
-                <h3>Jumpstart IoT in Java with OSGi enRoute</h3>
+                <h3>Jumpstart IoT </br>in Java with OSGi enRoute</h3>
                 <a href="http://enroute.osgi.org/" alt="http://enroute.osgi.org/">
+                    <img src="images/pi/Raspberry_Pi_Logo.png"  width="16%" alt="pi logo" /> 
                     <img src="images/java_logo.png"  width="20%" alt="java logo" /> 
                     <img src="images/enRoute/EnRouteIcon_CMYK.png"  width="20%" alt="enRoute logo" /> 
-                    <img src="images/pi/Raspberry_Pi_Logo.png"  width="16%" alt="pi logo" /> 
                 </a>
                 <p>
                     <small>created by <a href="#/aboutme">Peter Kirschner</a> for <a href="http://www.java-forum-stuttgart.de/de/Home.html">Java Forum Stuttgart</a></small><br>
                 </p>
                 <tiny>
-                    Schiller-Saal, July 07, 2016 - 12:15 to 13:00<br>
+                    A4, Schiller-Saal, July 07, 2016 - 12:15 to 13:00<br>
                     <a href="?print-pdf">printable version</a>
                 </tiny>
             </section>
 
             <section id="aboutme" data-markdown>
-                ### About Me
+                ### me, myself and I
             
                 ![](images/PeterKirschner.jpg "Peter Kirschner")
 
                 * name: Peter Kirschner
                 * profession: IT software engineer
+				* company: Kirschners GmbH
                 * email: &#112;e&#116;e&#114;&#064;&#107;&#105;&#114;&#115;&#099;&#104;&#110;e&#114;&#115;&#046;&#100;&#101;
                 * twitter: [@peterkir](http://twitter.com/peterkir)
-                * github: https://github.com/peterkir/ece2014           
-            </section>
-
-            <section id="toc">
-                <h3>Table of contents</h3>
-                <ul>
-                    <li>t.b.d</li>
-                </ul>
+                * github: https://github.com/peterkir/jfs2016
             </section>
 
             <section id="motivation">
@@ -85,22 +79,23 @@
                         * Lambda expressions
                         * Stream API improvements
                         * Java Mission Control
-				<aside class="notes">
-        Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-    </aside>	
+				    <aside class="notes">
+                       finally some functional programming
+					   application monitoring 
+                    </aside>	
                 </section>
                 <section id="motivation_1" data-markdown>
-                    ### Why OSGi
+                    ### OSGi
                     * Modularity to handle complexity
                     ![OSGi complexity](images/enRoute/complexity-1.png)
                 </section>
                 <section id="motivation_2" data-markdown>
-                    ### Why OSGi
+                    ### OSGi
 					* Modularity to handle complexity
                     ![OSGi layering](layering-osgi.png)
                 </section>
                 <section id="motivation_2">
-                    <h3>Why Bndtools</h3>
+                    <h3>Bndtools</h3>
                     <div style="position: relative;">
 <!--
                     <img src="images/text_really.png" style="position: absolute; top: 30px; left: 460px; border-style=solid; border:0px; background-color:#e4decd;"/>
