--- a/jfs2016-slides/index.html
+++ b/jfs2016-slides/index.html
@@ -286,7 +286,7 @@ Listening for transport dt_socket at address: 1044</code></pre>
                     * **OR** follow the [enRoute IoT tutorial](https://enroute.osgi.org/tutorial_iot/050-start.html)
                 </section>
                 <section id="setup_IDE_1" data-markdown>
-                    # IDEfix installer 
+                    ### IDEfix installer 
 					
                     Use [IDEfix installer](http://peterkir.github.io/idefix/bootstrap/osgi/) with pre-configured product and project setups
 					
