--- a/jfs2016-slides/index.html
+++ b/jfs2016-slides/index.html
@@ -212,13 +212,13 @@
                     <table>
                         <tr>
                             <td><img src="images/about01.png" alt="bndImportAnalysis" width="300px" style="float:left" />
-								&nbsp;&nbsp;automated import package analysis &nbsp;&nbsp;including versioning
+								&nbsp;&nbsp;automated import package &nbsp;&nbsp;analysis including versioning
 							</td>
                         </tr>
                         <tr>
                             <td>
 							<img src="images/about02.png" alt="bndRepositoryManagement" width="300px" style="float:left" />
-							&nbsp;&nbsp;powerful OSGi bundle repository &nbsp;&nbsp;management</p>
+							&nbsp;&nbsp;powerful OSGi bundle &nbsp;&nbsp;repository management</p>
 							</td>
                         </tr>
                     </table>
