--- a/jfs2016-slides/index.html
+++ b/jfs2016-slides/index.html
@@ -52,7 +52,8 @@
 				<p>
                 <small>
                     A4, Schiller-Saal, July 07, 2016 - 12:15 to 13:00<br>
-                    <a href="?print-pdf">printable version</a>
+                    <a href="?print-pdf">printable version</a><br>
+                    <a href="./speakerNotes.html">speaker notes</a>
                 </small>
                 </p>
             </section>
