fix link to Raspberry Pi documentation

--- a/jfs2016-slides/index.html
+++ b/jfs2016-slides/index.html
@@ -82,7 +82,7 @@
    									<img src="images/Lenovo_ThinkPad_X1_Ultrabook.jpg" height="80px" />
     								<a href="https://www.amazon.de/Sunfounder-Project-Starter-Raspberry-English/dp/B00P2E9W30/ref=sr_1_1?ie=UTF8&qid=1467546453&sr=8-1&keywords=sunfounder+kit+raspberry">
     									<img src="images/pi/SunFounderKit.jpg" height="80px" /></a>
-    								<a href="https://www.amazon.de/Sunfounder-Project-Starter-Raspberry-English/dp/B00P2E9W30/ref=sr_1_1?ie=UTF8&qid=1467546453&sr=8-1&keywords=sunfounder+kit+raspberry">
+    								<a href="http://www.watterott.com/de/Raspberry-Pi-7-Touchscreen-Display">
     									<img src="images/pi/RaspberryPi_Touchscreen.jpg" height="80px" /></a>
     							</td>
                             </tr>
